MVCに基づくリファクタリング

--- a/src/main/resources/templates/registerStudent.html
+++ b/src/main/resources/templates/registerStudent.html
@@ -39,11 +39,13 @@
       <option value="other">その他</option>
     </select>
   </div>
-  <div>
-    <label for="remarks">備考</label>
-    <input type="text" id="remarks" th:field="*{student.remarks}" required/>
+  <div th:each="course, stat : *{studentsCourses}">
+    <label for="courseName"
+    th:for="studentCourse.__${stat.index}__.courseName">受講コース名：</label>
+    <input type="text" id="courseName" th:id="studentCourse.__${stat.index}__.courseName"
+           th:field="*{studentsCourses[__${stat.index}__].courseName}"/>
   </div>
-  <button type="submit">登録</button>
+    <button type="submit">登録</button>
 </form>
 
 </body>
