--- a/src/main/resources/templates/updateStudent.html
+++ b/src/main/resources/templates/updateStudent.html
@@ -40,14 +40,22 @@
     <input id="gender" th:field="*{student.gender}" required/>
   </div>
   <div th:each="course, stat : *{studentsCourses}">
-    <label for="id"
+    <label for="studentCourseId"
            th:for="studentCourse.__${stat.index}__.id">受講コースID：</label>
-    <input type="text" id="id" th:id="studentCourse.__${stat.index}__.id"
+    <input type="text" id="studentCourseId" th:id="studentCourse.__${stat.index}__.id"
            th:field="*{studentsCourses[__${stat.index}__].id}"/>
     <label for="courseName"
            th:for="studentCourse.__${stat.index}__.courseName">受講コース名：</label>
     <input type="text" id="courseName" th:id="studentCourse.__${stat.index}__.courseName"
            th:field="*{studentsCourses[__${stat.index}__].courseName}"/>
+  </div>
+  <div>
+  <label for="remarks">備考</label>
+  <input id="remarks" th:field="*{student.remarks}"/>
+</div>
+  <div>
+    <label for="isDeleted">キャンセル</label>
+    <input type="checkbox" id="isDeleted" th:field="*{student.deleted}"/>
   </div>
     <button type="submit">更新</button>
 </form>
